<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#FFFFFF" >

    <ImageView
        android:id="@+id/homeHeader"
        android:src="@drawable/homeheader"
        android:contentDescription="@string/home_header"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:onClick="goToAboutUs"
        />
    
    <ImageView
        android:id="@+id/instructions"
        android:src="@drawable/instructions"
        android:contentDescription="@string/instructions"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/homeHeader"
        android:onClick="goToInstructions"
        />
    
    <ImageView
        android:id="@+id/reader"
        android:src="@drawable/reader"
        android:contentDescription="@string/reader"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/instructions"
        android:onClick="goToReader"
        />
    
    <ImageView
        android:id="@+id/homeFooter"
        android:src="@drawable/homefooter"
        android:contentDescription="@string/home_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/reader"
        android:layout_marginTop="100dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
